--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -347,8 +347,8 @@ FORM BG			#FFFFFF
 		*/
 	}
 
-	.selectMenu, .selectMenu input {
-		background-color: #FFFFFF;
+
+	.selectMenu ,.selectMenu input {		background-color: #FFFFFF;
 	}
 
 	.selectMenu span {
