--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGreen/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGreen/styles/appearance.css
@@ -25,8 +25,8 @@
 
 /*
 * Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
-* fÃ¼r wissenschaftlich-technische Information mbH and Max-Planck-
-* Gesellschaft zur FÃ¶rderung der Wissenschaft e.V.
+* für wissenschaftlich-technische Information mbH and Max-Planck-
+* Gesellschaft zur Förderung der Wissenschaft e.V.
 * All rights reserved. Use is subject to license terms.
 */
 
