aligned to appearance "blue"

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -454,6 +454,7 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 
 .add:disabled, .remove:disabled {
     cursor: default;
+    background-color: transparent !important;
 }
 
 .fullItem .groupBtn {
