Former-commit-id: 4f37234cff3b30f6057aa3c9b153e1a7231030d9

--- a/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
@@ -49,7 +49,7 @@
 					<h:outputLabel id="context" styleClass="noDisplay" value="#{contextCriterionBean.context}"/>
 
 					<b class="quad_label">&#160;</b>
-					<h:selectOneMenu styleClass="large_select" id="selectContext" value="#{contextCriterionBean.contextCriterionVO.collection}" onchange="submit()" valueChangeListener="#{contextCriterionBean.contextChanged}" immediate="true">
+					<h:selectOneMenu styleClass="large_select" id="selectContext" value="#{contextCriterionBean.contextCriterionVO.searchString}">
 						<f:selectItems value="#{AdvancedSearchEdit.contextCriterionCollection.contextList}"/>
 					</h:selectOneMenu>
 
