--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
@@ -1,105 +1,105 @@
 @charset "UTF-8";
-
 /*
-*
-* CDDL HEADER START
-*
-* The contents of this file are subject to the terms of the
-* Common Development and Distribution License, Version 1.0 only
-* (the "License"). You may not use this file except in compliance
-* with the License.
-*
-* You can obtain a copy of the license at license/ESCIDOC.LICENSE
-* or http://www.escidoc.de/license.
-* See the License for the specific language governing permissions
-* and limitations under the License.
-*
-* When distributing Covered Code, include this CDDL HEADER in each
-* file and include the License file at license/ESCIDOC.LICENSE.
-* If applicable, add the following below this CDDL HEADER, with the
-* fields enclosed by brackets "[]" replaced with your own identifying
-* information: Portions Copyright [yyyy] [name of copyright owner]
-*
-* CDDL HEADER END
-*/
-
+ *
+ * CDDL HEADER START
+ *
+ * The contents of this file are subject to the terms of the
+ * Common Development and Distribution License, Version 1.0 only
+ * (the "License"). You may not use this file except in compliance
+ * with the License.
+ *
+ * You can obtain a copy of the license at license/ESCIDOC.LICENSE
+ * or http://www.escidoc.de/license.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at license/ESCIDOC.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
+ */
 /*
-* Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
-* für wissenschaftlich-technische Information mbH and Max-Planck-
-* Gesellschaft zur Förderung der Wissenschaft e.V.
-* All rights reserved. Use is subject to license terms.
-*/
-
+ * Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
+ * für wissenschaftlich-technische Information mbH and Max-Planck-
+ * Gesellschaft zur Förderung der Wissenschaft e.V.
+ * All rights reserved. Use is subject to license terms.
+ */
 /*
-ALL COLORS USED
-
-BACKGROUND		#EAF4F7 MPIPL Replacement: #436976
-
-LINK COLOR		#147DA2 MPIPL Replacement: #000000
-AUTHOR/ORG BG		#4397B4
-LIGHT LINES		#A1CBDA MPIPL Replacement: #C65252
-DROPDOWN/BG		#DCECF1 MPIPL Replacement: #E6DDD5
-INPUT BG		#F3F8FA MPIPL Replacement: #E6DDD5
-
-PAGE TITLE		#0F313E
-
-ERROR MSG		#E95A29
-
-SUCCESS MSG		#56871B
-
-DEACTIVATED		#827775
-
-DEA LIGHT		#CDC9C8
-
-TEXT			#524240
-
-TEXT LIGHT		#BAB4B3
-
-MOUSEOVER		#382926 MPIPL Replacement: #C65252 
-
-INPUT TEXT		#000000
-
-FORM BG			#FFFFFF
-
-*/
-
+ ALL COLORS USED
+ 
+ BACKGROUND		#EAF4F7 MPIPL Replacement: #436976
+ 
+ LINK COLOR		#147DA2 MPIPL Replacement: #000000
+ AUTHOR/ORG BG		#4397B4
+ LIGHT LINES		#A1CBDA MPIPL Replacement: #C65252
+ DROPDOWN/BG		#DCECF1 MPIPL Replacement: #E6DDD5
+ INPUT BG		#F3F8FA MPIPL Replacement: #E6DDD5
+ 
+ PAGE TITLE		#0F313E
+ 
+ ERROR MSG		#E95A29
+ 
+ SUCCESS MSG		#56871B
+ 
+ DEACTIVATED		#827775
+ 
+ DEA LIGHT		#CDC9C8
+ 
+ TEXT			#524240
+ 
+ TEXT LIGHT		#BAB4B3
+ 
+ MOUSEOVER		#382926 MPIPL Replacement: #C65252
+ 
+ INPUT TEXT		#000000
+ 
+ FORM BG			#FFFFFF
+ 
+ */
 /*FONT DEFINITION*/
-	/*HEADER*/
-		/*H1*/
-		h1 {
-				color: #C65252;
-				font-weight: normal;
-			}
-		/*H2*/
-		h2 {
-				font-weight: normal;
-			}
-		/*H3*/
-		h3 {
+/*HEADER*/
+/*H1*/
+h1 {
+    color: #C65252;
+    font-weight: normal;
+}
 
-			}
-		/*H4*/
-			h4 {
-				
-			}
-		/*H5*/
-		h5 {
-					
-			}
-		/*H6*/
-		h6 {
-				font-weight: bold;
-				color: #524240;
-				margin: 0px;
-			}
-	/*GENERAL*/
-		/*FONT RELATED*/
-		body, label, input, textarea, select, button, input.numberLabel, h2, h3, h6, a {
-			font-family: Arial, Helvetica, sans-serif;
-		}
-		input[type=text], textarea {
-			font-family : Courier, "Courier New", serif;
-			background-image: url ('../images/input_background.gif');
+/*H2*/
+h2 {
+    font-weight: normal;
+}
+
+/*H3*/
+h3 {
+}
+
+/*H4*/
+h4 {
+}
+
+/*H5*/
+h5 {
+}
+
+/*H6*/
+h6 {
+    font-weight: bold;
+    color: #524240;
+    margin: 0px;
+}
+
+/*GENERAL*/
+/*FONT RELATED*/
+body, label, input, textarea, select, button, input.numberLabel, h2, h3, h6, a {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+input[type = text], textarea {
+    font-family: Courier, "Courier New", serif;
+    background-image: url ('../images/input_background.gif');
 		}
 		h1, h4, h5 {
 			font-family: "Myriad Pro Condensed", "Arial Narrow", sans-serif;
@@ -374,13 +374,13 @@ FORM BG			#FFFFFF
 		background-color: #FFFFFF;
 	}
 
-	.selectMenu span {
-		font-weight: bold;
-	}
+.selectMenu a {
+    color: #147DA2;
+}
 
 	.selectMenu a:hover, .selectMenu input:hover {
 		background-color: #4397B4;
-		color: #FFFFFF;
+		color: #000000;
 	}
 	
 	.statusArea .ascSort, .statusArea .desSort, th .ascSort, th .desSort {
