--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -330,8 +330,15 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 
 /*SELECT MENU*/
 .itemList .checkboxSelectButton {
-    background-color: #FFFFFF;
     cursor: pointer;
+}
+
+.itemList .checkBoxCloseSelectButton:hover, .selectMenu .checkBoxCloseSelectButton:focus {
+    background-color: transparent;
+}
+
+.itemList .checkboxSelectButton:hover {
+    background-color: #FFFFFF;
 }
 
 .selectMenu {
@@ -346,17 +353,13 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
     background-color: #FFFFFF;
 }
 
-.selectMenu span {
-    font-weight: bold;
+.selectMenu a {
+    color: #147DA2;
 }
 
 .selectMenu a:hover, .selectMenu input:hover {
-    background-color: #4397B4;
-    color: #FFFFFF;
-}
-
-.statusArea .ascSort, .statusArea .desSort, th .ascSort, th .desSort {
-    background-color: #EAF4F7;
+    background-color: #DCECF1;
+    color: #000000;
 }
 
 .listBackground .ascSort, .listBackground .descSort {
