--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
@@ -330,8 +330,11 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 
 /*SELECT MENU*/
 .itemList .checkboxSelectButton {
-    background-color: #FFFFFF;
     cursor: pointer;
+}
+
+.itemList .checkboxSelectButton:hover {
+    background-color: #FFFFFF;
 }
 
 .selectMenu {
@@ -342,21 +345,21 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
      */
 }
 
+.itemList .checkBoxCloseSelectButton:hover, .selectMenu .checkBoxCloseSelectButton:focus {
+    background-color: transparent;
+}
+
 .selectMenu, .selectMenu input {
     background-color: #FFFFFF;
 }
 
-.selectMenu span {
-    font-weight: bold;
+.selectMenu a {
+    color: #147DA2;
 }
 
 .selectMenu a:hover, .selectMenu input:hover {
     background-color: #5A8D9E;
-    color: #FFFFFF;
-}
-
-.statusArea .ascSort, .statusArea .desSort, th .ascSort, th .desSort {
-    background-color: #E7E8E2;
+    color: #000000;
 }
 
 .listBackground .ascSort, .listBackground .descSort {
