--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -344,21 +344,21 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
      */
 }
 
+.itemList .checkBoxCloseSelectButton:hover, .selectMenu .checkBoxCloseSelectButton:focus {
+    background-color: transparent;
+}
+
 .selectMenu, .selectMenu input {
     background-color: #FFFFFF;
 }
 
-.selectMenu span {
-    font-weight: bold;
+.selectMenu a {
+    color: #147DA2;
 }
 
 .selectMenu a:hover, .selectMenu input:hover {
     background-color: #3391D4;
-    color: #FFFFFF;
-}
-
-.statusArea .ascSort, .statusArea .desSort, th .ascSort, th .desSort {
-    background-color: #FFFFFF;
+    color: #000000;
 }
 
 .listBackground .ascSort, .listBackground .descSort {
