aligned to styleguide
Former-commit-id: 914418ca5751df27bd344ac3cf486ea3372c4aad

--- a/pubman/pubman_presentation/src/main/webapp/header/Breadcrumb.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/Breadcrumb.jspf
@@ -48,7 +48,7 @@
 						<tr:outputText value="#{item.pageLabel}" />
 					</tr:commandLink>
 					<tr:outputText value="#{item.pageLabel}" rendered="#{item.isLast}"/>
-					<tr:outputText value=" > " rendered="#{!item.isLast}"/>
+					<tr:outputText value=" / " rendered="#{!item.isLast}"/>
 <%-- stop has to be reworked anyway --%>
 
 
