--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -59,34 +59,34 @@
 						</span>
 					</span>
 				</h:panelGroup>
-	
 				<h:panelGroup styleClass="large_area0_p8 sectionToolSection">
 					<h:commandButton id="btnAddAuthors" title="#{tip.EditItem_btnAddAuthors}" styleClass="free_txtBtn groupBtn sectionTool" value="#{lbl.EditItem_btnAddAuthors}" action="#{EditItem.addCreatorString}" />
 				</h:panelGroup>
 			</h:panelGroup>
 		</div>
 	</h:panelGroup>
+    <div class="full_area0 itemBlock">
+    <span class="xLarge_area0_p8 endline blockHeader">&nbsp</span>
+	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline">
 	
-	<h:panelGroup layout="block" styleClass="full_area0 xLarge_marginLExcl itemBlockContent endline">
-		<h3 class="xLarge_area0_p8 endline blockHeader clear">
-			<h:outputText value="" />
-		</h3>
-		<h:panelGroup styleClass="free_area0 large_marginLExcl itemLine noTopBorder endline" rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
-			<h:outputText styleClass="small_area0 xSmall_marginLExcl" value="#{genre.creator_person_organization_creator_select_roles_label}" converter="GenreLabelConverter"/>
+	<div class="full_area0">
+    <span class="xLarge_area0_p8 endline blockHeader">&nbsp;</span>
+		<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline" rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
+			<h:outputText styleClass="small_area0" value="#{genre.creator_person_organization_creator_select_roles_label}" converter="GenreLabelConverter"/>
 			<h:outputText styleClass="small_area0" value="#{genre.creator_person_organization_creator_select_roles_creator_type_label}" converter="GenreLabelConverter"/>
 			<h:outputText styleClass="large_area0" value="#{genre.creator_person_organization_creator_persons_person_family_name_label}" converter="GenreLabelConverter" rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}"/>
 			<h:outputText styleClass="large_area0" value="#{genre.creator_person_organization_creator_persons_person_given_name_label}" converter="GenreLabelConverter" rendered="#{!(genre.creator_person_organization_creator_persons_person_given_name_display == 'false' && genre.creator_person_organization_creator_persons_person_given_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_given_name_display == 'false' && genre.creator_person_organization_creator_persons_person_given_name_form_id == 'all')}"/>
 			<h:outputText styleClass="xSmall_area0" value="#{lbl.organizationNumbers}" rendered="#{!(genre.creator_person_organization_creator_organizations_display == 'false' && genre.creator_person_organization_creator_organizations_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_display == 'false' && genre.creator_person_organization_creator_organizations_form_id == 'all')}"/>
 			<h:outputText styleClass="medium_area0" value=" "/>
 		</h:panelGroup>
-
+	<span class="full_area0">	
 		<tr:iterator id="iterCreatorOrganisationAuthors" var="creator" value="#{EditItemSessionBean.creators}" rows="0">
-			<h:panelGroup layout="block" styleClass="suggestAnchor xSmall_marginLExcl">
+			<h:panelGroup layout="block" styleClass="suggestAnchor endline">
 				<%-- Creator person family name, Creator person given name --%>
 				<h:panelGroup layout="block" styleClass="full_area0 endline personArea" rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
-					<span class="large_area0 clear">&nbsp;</span>
+					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span><span class="xTiny_area0">&nbsp;</span>
 					<%-- Creator role --%>
-					<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select replace" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
+					<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 						<f:selectItems value="#{EditItemSessionBean.creatorRoles}"/>
 					</h:selectOneMenu>
 					<h:selectOneMenu id="selcreatorTypeString" value="#{creator.typeString}" styleClass="small_select" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}" onchange="$('.hiddenButtonPasteOrganizations').click();">
@@ -98,9 +98,9 @@
 					<tr:commandButton id="btnAddCreatorOrganization" styleClass="noDisplay hiddenButtonPasteOrganizations" action="#{creator.addOrganization}"/>
 					<h:inputText id="inppersons_person_ous_optional" styleClass="xSmall_txtInput ouNumber" value="#{creator.ouNumbers}"/>
 					<h:inputText id="inppersons_identifier" styleClass="noDisplay personIdentifier" value="#{creator.person.identifier.id}"/>
-					<h:outputLink styleClass="small_area0 authorCard authorLink" value="#{creator.person.identifier.id}" rendered="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" target="_blank">&nbsp;</h:outputLink>
-					<h:panelGroup rendered="#{creator.person.identifier.id == null || creator.person.identifier.id == ''}" styleClass="xSmall_area0 authorLink">&nbsp;</h:panelGroup>
-					<h:panelGroup styleClass="large_area0_p8">
+					<h:outputLink styleClass="authorCard authorLink" value="#{creator.person.identifier.id}" rendered="#{creator.person.identifier.id != null and creator.person.identifier.id != ''}" target="_blank">&nbsp;</h:outputLink>
+					<h:panelGroup rendered="#{creator.person.identifier.id == null || creator.person.identifier.id == ''}" styleClass="authorLink">&nbsp;
+					<h:panelGroup layout="block"></h:panelGroup>
 						<tr:commandButton id="btnAddCreator" shortDesc="#{tip.EditItem_addCreator}" styleClass="min_imgBtn groupTool add" action="#{creator.add}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
 						<tr:commandButton id="btnRemoveCreator" shortDesc="#{tip.EditItem_removeCreator}" styleClass="min_imgBtn groupTool remove" disabled="#{creator.singleCreator}" action="#{creator.remove}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
 					</h:panelGroup>
@@ -108,7 +108,7 @@
 		<%-- If Organization is Creator --%>
 				<h:panelGroup styleClass="full_area0 endline suggestAnchor" layout="block" rendered="#{creator.organizationType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<%-- Creator role --%>
-					<span class="large_area0">&nbsp;</span>
+					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span><span class="xTiny_area0">&nbsp;</span>
 					<h:selectOneMenu id="selCreatorOrgRoleString" styleClass="small_select replace" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 						<f:selectItems value="#{EditItemSessionBean.creatorRoles}"/>
 					</h:selectOneMenu>
@@ -118,20 +118,21 @@
 					<h:inputText id="inpcreator_organization_name_optional" styleClass="huge_txtInput organizationSuggest organizationName xSmall_marginRExcl" value="#{creator.organization.name.value}" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}"/>
 					<h:inputText id="inpcreator_organization_identifier_optional" styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creator.organization.identifier}"/>
 				
-					<h:outputLink styleClass="small_area0 ouCard ouLink" rendered="#{creator.organization.identifier != null and creator.organization.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.organization.identifier}', 980, 400, 'Details');return false"></h:outputLink>
-						<h:panelGroup rendered="#{creator.organization.identifier == null || creator.organization.identifier == ''}" styleClass="xSmall_area0 ouLink">&nbsp;</h:panelGroup>
-					<h:panelGroup styleClass="large_area0_p8">
+					<h:outputLink styleClass="min_imgBtn ouCard ouLink" rendered="#{creator.organization.identifier != null and creator.organization.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.organization.identifier}', 980, 400, 'Details');return false"></h:outputLink>
+						<h:panelGroup rendered="#{creator.organization.identifier == null || creator.organization.identifier == ''}" styleClass="min_imgBtn ouLink">&nbsp;</h:panelGroup>
+					<h:panelGroup styleClass="small_area0_p8">
 						<tr:commandButton id="btnAddCreatorOrg" shortDesc="#{tip.EditItem_addCreator}" styleClass="min_imgBtn groupTool add" action="#{creator.add}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
 						<tr:commandButton id="btnRemoveCreatorOrg" shortDesc="#{tip.EditItem_removeCreator}" styleClass="min_imgBtn groupTool remove" disabled="#{creator.singleCreator}" action="#{creator.remove}" rendered="#{genre.creator_person_organization_repeatable != 'false'}"/>
 					</h:panelGroup>
 				</h:panelGroup>
-	
 			</h:panelGroup>
+			</span>
 		</tr:iterator>
-		<span class="large_area0 clear">&nbsp;</span>				
-		
+		</span>
+					<span class="full_area0 clear">&nbsp;</span>
+	<span class="free_area0 xTiny_marginLExcl endline">				
 		<!-- Creator Organizations - Headline -->
-		<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
+		<h:panelGroup layout="block" styleClass="itemLine noTopBorder" rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 			<span class="large_area0 clear">&nbsp;</span>
 			<h:outputText styleClass="xSmall_area0 xSmall_marginLExcl" value=""/>
 			<h:outputText styleClass="huge_area0 xSmall_marginLExcl" value="#{lbl.EditItem_lblOrganization}"/>
@@ -140,23 +141,27 @@
 
 		<tr:iterator id="iterCreatorOrganisation" var="organization" value="#{EditItemSessionBean.creatorOrganizations}" rows="0" rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 			<h:panelGroup layout="block" styleClass="suggestAnchor personOrganizations large_marginLExcl clear">
-				<h:outputText styleClass="xSmall_area0" value="#{organization.number}"/>
+				<h:outputText styleClass="xTiny_area0 xTiny_marginRExcl labelLine" value="#{organization.number}"/>
 				<h:inputText id="inporganizations_organization_name" styleClass="huge_txtInput organizationSuggest organizationName" value="#{organization.name.value}"/>
 				<h:inputText id="inporganizations_organization_identifier" styleClass="noDisplay organizationIdentifier" value="#{organization.identifier}"/>
 				<h:inputText id="inporganizations_organization_address" styleClass="xLarge_txtInput organizationAddress" value="#{organization.address}"/>
 				<h:outputLink styleClass="small_area0 ouCard ouLink" rendered="#{organization.identifier != null and organization.identifier != ''}" value="#" onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{organization.identifier}', 980, 400, 'Details');return false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:outputLink>
 				<h:panelGroup rendered="#{organization.identifier == null || organization.identifier == ''}" styleClass="xSmall_area0 ouLink">&nbsp;</h:panelGroup>					
-				<h:panelGroup styleClass="large_area0_p8 lineToolSection">
+				<h:panelGroup styleClass="small_area0">
 					<tr:commandButton id="btnAddCreatorPersonAffiliation" styleClass="min_imgBtn groupTool add" text=" " shortDesc="#{tip.EditItem_addOrga}" action="#{organization.add}" rendered="#{genre.creator_person_organization_creator_organizations_repeatable != 'false'}"/>
 					<tr:commandButton id="btnRemoveCreatorPersonAffiliation" styleClass="min_imgBtn groupTool remove" text=" " shortDesc="#{tip.EditItem_removeOrga}" disabled="#{EditItemSessionBean.organizationCount == 1}" action="#{organization.remove}" rendered="#{genre.creator_person_organization_creator_organizations_repeatable != 'false'}"/>
 				</h:panelGroup>
 			</h:panelGroup>
 		</tr:iterator>
+					<span class="full_area0 clear">&nbsp;</span>
+	</span>
 		<a class="free_area0 collapse">
 			<h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" />
 			<h:outputText value="#{genre.creator_person_organization_label}" converter="GenreLabelConverter" />
 		</a>
+	</div>
 	</h:panelGroup>
+  </div>
 	<a class="free_area0 expand" style="float:left;text-align:left; margin-left:15.5em;">
 		<h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" />
 		<h:outputText value="#{genre.creator_person_organization_label}" converter="GenreLabelConverter" />
