Former-commit-id: ac73ea9bc1969ad68618e789e37c323a109f136d

--- a/pubman/pubman_presentation/src/main/webapp/submitItem/SubmitItem.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/submitItem/SubmitItem.jspf
@@ -36,7 +36,7 @@
 	</h:panelGroup>
 		<h:panelGroup styleClass="seperator" />
 	<h:panelGroup styleClass="free_area0_p8 endline itemHeadline">
-		<b><h:outputText value="#{SubmitItem.itemControllerSessionBean.currentPubItem.metadata.title.value}"/></b>
+		<b><h:outputText value="#{SubmitItem.itemControllerSessionBean.currentPubItem.metadata.title.value}" converter="HTMLSubSupConverter" escape="false"/></b>
 	</h:panelGroup>
 </div>
 <div class="full_area0 itemBlock">
