--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -218,7 +218,7 @@ All rights reserved. Use is subject to license terms.
 		      		<span class="seperator"></span>
 		      		<span class="free_area0_p8 itemHeadline">
 						<h:outputLink title="#{tip.list_item}" value="#{item.link}">
- 							<b><h:outputText value="#{item.shortTitle}"/></b>
+ 							<b><h:outputText value="#{item.shortTitle}" converter="HTMLSubSupConverter" escape="false"/></b>
 	 					</h:outputLink>
 		      		</span>
 		      	</td>
