--- a/pubman/pubman_presentation/src/main/webapp/viewItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/SourceGroup.jspf
@@ -55,7 +55,7 @@
 					<h:outputText value="#{lbl.ViewItemFull_lblSourceTitle}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{source.source.title.value}"/>
+					<h:outputText value="#{source.source.title.value}" converter="HTMLSubSupConverter" escape="false"/>
 				</span>
 			</div>
 
@@ -66,7 +66,7 @@
 					&#160;<h:outputText value="#{lbl.ViewItemFull_lblSourceAlternativeTitle}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputText value="#{altTitle.value}"/>
+					<h:outputText value="#{altTitle.value}" converter="HTMLSubSupConverter" escape="false"/>
 				</span>
 			</h:panelGroup>
 		</tr:iterator>
