--- a/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemMedium.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/ViewItemMedium.jspf
@@ -64,7 +64,7 @@
 			<h:outputText value="#{lbl.ViewItemMedium_lblSourceTitle}"/><span class="noDisplay">: </span>
 		</span>
 		<span class="xHuge_area0 endline">
-			<h:outputText value="#{item.sourceTitle}"/>
+			<h:outputText value="#{item.sourceTitle}" converter="HTMLSubSupConverter" escape="false"/>
 			<h:outputText value="#{lbl.ViewItemFull_lblNoEntry}" rendered="#{item.sourceTitle==null || item.sourceTitle==''}"/>
 		</span>
 	</div>
