--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -39,7 +39,7 @@
 			converter="GenreLabelConverter" /></h3>
 		<span class="seperator"></span>
 		<div class="free_area0 itemBlockContent endline"><input id="btnShowMultipleAuthors" type="button"
-			class="free_txtBtn groupBtn showMultipleAuthors"
+			class="free_txtBtn groupBtn tiny_marginLExcl showMultipleAuthors"
 			value="<h:outputText value='#{lbl.submission_lblAuthorCopyPasteLabel}'/>" /> <%-- Author copy&paste --%> <h:panelGroup
 			layout="block" styleClass="free_area0 multipleAuthors">
 			<%-- Hidden field for display/non-display Author copy&paste group --%>
@@ -65,7 +65,6 @@
 	<div class="full_area0 itemBlock">
 	<span class="xLarge_area0_p8 endline blockHeader">&nbsp</span> 
 	<h:panelGroup layout="block" styleClass="free_area0 itemBlockContent endline">
-<%-- 		<div class="full_area0"> --%>
 		<span class="xLarge_area0_p8 endline blockHeader">&nbsp;</span>
 		<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline"
 			rendered="#{!(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
@@ -207,9 +206,9 @@
 		<a class="free_area0 collapse"> <h:outputText
 			value="#{lbl.ViewItemFull_lblHideGroup}" /> <h:outputText value="#{genre.creator_person_organization_label}"
 			converter="GenreLabelConverter" /> </a>
-<%-- </div> --%>
-	</h:panelGroup></div>
-	<a class="free_area0 expand" style="float: left; text-align: left; margin-left: 15.5em;"> <h:outputText
+	</h:panelGroup>
+	<a class="free_area0 expand" > <h:outputText
 		value="#{lbl.ViewItemFull_lblShowGroup}" /> <h:outputText value="#{genre.creator_person_organization_label}"
 		converter="GenreLabelConverter" /> </a>
+		</div>
 </h:panelGroup>
