Select popup button fixed

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Gradient/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_Gradient/styles/appearance.css
@@ -358,7 +358,7 @@ input[type = text], textarea {
 	
 		/*SELECT MENU*/
 	
-	.itemList .checkboxSelectButton {
+	.itemList .checkBoxSelectButton {
 		background-color: #FFFFFF;
 		cursor: pointer;
 	}
