--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_MPIPL/styles/appearance.css
@@ -357,7 +357,7 @@ input[type = text], textarea {
 	
 		/*SELECT MENU*/
 	
-	.itemList .checkboxSelectButton {
+	.itemList .checkBoxSelectButton {
 		background-color: #FFFFFF;
 		cursor: pointer;
 	}
