--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/componentCSS/lists.css
@@ -123,18 +123,18 @@
 }
 	/*SELECT MENU*/
 	
-.itemList .checkboxSelectButton {
+.itemList .checkBoxSelectButton {
 	margin-top: 0.19em;
 	margin-right: 0.19em;
 	background: transparen !important;
 }
 
 	/*REPLACEMENT HACK FOR IE LESS THAN 6*/
-	* html .itemList th .checkboxSelectButton {
+	* html .itemList th .checkBoxSelectButton {
 	margin-right: -1.19em;
 	}
 	/*REPLACEMENT HACK FOR IE 7*/
-	*:first-child+html .itemList th .checkboxSelectButton {
+	*:first-child+html .itemList th .checkBoxSelectButton {
 	margin-right: -1.19em;
 	}
 
