--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -100,7 +100,7 @@ All rights reserved. Use is subject to license terms.
   <thead class="listHeader" style="text-align: left; vertical-align:top;">
     <tr class="full_area0">
       	<th class="free_area0_p8 endline itemSelectArea">
-      		<input type="button" class="min_imgBtn checkboxSelectButton"/>
+      		<input type="button" class="min_imgBtn checkBoxSelectButton"/>
 			<div class="large_area1 xTiny_marginLIncl selectMenu" style="display: none;">
 				<input type="button" class="min_imgBtn checkBoxCloseSelectButton"></input>
 				<span class="medium_area0_p8"><h:outputText value="#{lbl.List_SelectItem}"/></span>
