Select popup button fixed
Former-commit-id: 9a22e6635b80b6073b4047a99467956a4f53deca

--- a/pubman/pubman_presentation/src/main/webapp/resources/commonJavaScript/externalJavaScript/DateJS/easterEggs/skin_PubWoman/styles/appearance.css
+++ b/pubman/pubman_presentation/src/main/webapp/resources/commonJavaScript/externalJavaScript/DateJS/easterEggs/skin_PubWoman/styles/appearance.css
@@ -300,7 +300,7 @@
 	
 		/*SELECT MENU*/
 	
-	.itemList .checkboxSelectButton {
+	.itemList .checkBoxSelectButton {
 		background-color: #FFFFFF;
 		cursor: pointer;
 	}
